feat(all): init

--- a/什么是计算机.md
+++ b/什么是计算机.md
@@ -14,7 +14,7 @@
 
 所谓的模块化类似于乐高积木，使用相同的模块，堆砌成的复杂系统，每一个模块都是相同的，简单的。
 
-等价化：解决一个复杂的事件，等价成一个简单的事件去解决，在计算机中任何的事情都可以使用等价的方式最终转化为四则运算和二进制的逻辑运算（与或非）
+等价化：解决一个复杂的事件，等价成一个简单的事件去解决，在计算机中任何的事情都可以使用等价的方式最终转化为四则运算和二进制的逻辑运算 (与或非)
 
 计算机总是至顶向下的思考问题：总是把复杂的问题简单化去处理。
 
