--- a/算法/算法/排序算法/冒泡排序.md
+++ b/算法/算法/排序算法/冒泡排序.md
@@ -42,13 +42,13 @@ type numbers interface {
 ```
 ## 时间复杂度分析
 ### 平均时间复杂度
-最外层肯定是要循环n次的，那么里面要循环几次呢，第一次是1次，第二次是2次，第三次是3次...n次，那么可以得出来，内部循环的平均次数是 
-(1+2...n)/n ,然后最终的次数是 1+2...n / n *n ,最终计算出来的平均时间复杂度就是 `o(n^2)`
+最外层肯定是要循环 n 次的，那么里面要循环几次呢，第一次是 1 次，第二次是 2 次，第三次是 3 次...n 次，那么可以得出来，内部循环的平均次数是 
+(1+2...n)/n，然后最终的次数是 1+2...n / n *n，最终计算出来的平均时间复杂度就是 `o(n^2)`
 ### 最好时间复杂度
-假设内部循环每次都是常数量级的交换，那么内部的时间复杂度就是o(1),根据内外相乘的原理，最好的时间复杂度就是 o(n)
+假设内部循环每次都是常数量级的交换，那么内部的时间复杂度就是 o(1)，根据内外相乘的原理，最好的时间复杂度就是 o(n)
 ### 最坏时间复杂度
-假设内部的时间复杂度每次都是n次，那么最终算出来的结果就是 o(n^2)
+假设内部的时间复杂度每次都是 n 次，那么最终算出来的结果就是 o(n^2)
 ## 空间复杂度
-不需要申请其余的内存空间，所以是o(1)
+不需要申请其余的内存空间，所以是 o(1)
 ## 参考资料
 - https://github.com/hustcc/JS-Sorting-Algorithm/blob/master/1.bubbleSort.md
